# stancounts

./: LICENSE  README.md  explore_larger.py  explore_logbase_and_fix.py  explore_reverse_log1p.py  pyproject.toml
.claude-plugin/: plugin.json
hooks/: hooks.json  post_stancounts_success.py
scripts/exploration/: explore_robustness.py  test_chondro.py
skills/stancounts/: SKILL.md
src/stancounts/: __init__.py  core.py  counts.py  detect.py
tests/: conftest.py  test_core.py  test_counts.py
